# gemini-file-search-mcp-server

./: .dockerignore  .env.example  .gitignore  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  cloudbuild.yaml  deploy_cloudrun.sh  docker-compose.yml  fix_cloudrun.sh  gemini_client.py  interactive_test.py  pyproject.toml  requirements.txt  server.py  start.sh  start_mcp_server.sh  test_http_server.sh
.claude/: settings.local.json
src/: __init__.py  config.py  exceptions.py  gemini_client.py  http_server.py  models.py  server.py
src/tools/: __init__.py  document_tools.py  search_tools.py  store_tools.py
tests/: __init__.py  test_cloud_run.py  test_document_tools.py  test_local.py  test_search_tools.py  test_store_tools.py
tools/: __init__.py  document_tools.py  search_tools.py  store_tools.py  util_tools.py
