[project]
name = "gemini-file-search-mcp-server"
version = "0.1.0"
description = "MCP server exposing Gemini File Search operations"
authors = [{name = "Gemini File Search MCP"}]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "google-genai>=0.4.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
